--- a/src/routes/pdf/_base.njk
+++ b/src/routes/pdf/_base.njk
@@ -261,8 +261,8 @@
 		</header>
 		<div class="invoice__data">
 			<ul class="contact">
-				<li>Allegis Group SA/NV</li>
-				<li>Kanselarijstraat 17/A</li>
+				<li>Allegis Group (Belgium) SRL</li>
+				<li>Markiesstraat – Rue du Marquis 1</li>
 				<li>1000 Brussel</li>
 				<li>België</li>
 				<li>BE 0543.691.037</li>
